Fixed layout issues

--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -49,7 +49,7 @@
 
         &__items {
 
-            width: 90vw;
+            width: 80vw;
             margin: -2rem auto 0 auto;
 
         }
@@ -191,7 +191,7 @@
 
     .projects {
 
-        height: 70vh;
+        height: 100vh;
         justify-content: space-evenly;
 
         &__items {
